--- a/gocase/challenge2_server/Gemfile
+++ b/gocase/challenge2_server/Gemfile
@@ -1,7 +1,13 @@
 source 'https://rubygems.org'
 
+gem 'certified'
+gem 'httparty'
+gem 'openssl'
+gem 'puma'
+gem 'shopify_api', '~> 13.3'
+gem 'shopify_app', '~> 21.8'
 gem 'sinatra'
 gem 'sinatra-contrib'
-gem 'httparty'
-gem 'puma'
 gem 'sinatra-cors'
+
+gem 'rubocop', '~> 1.59'
