--- a/gocase/challenge2_server/Gemfile
+++ b/gocase/challenge2_server/Gemfile
@@ -2,12 +2,12 @@ source 'https://rubygems.org'
 
 gem 'certified'
 gem 'httparty'
+gem 'json'
 gem 'openssl'
 gem 'puma'
+gem 'rubocop', '~> 1.59'
 gem 'shopify_api', '~> 13.3'
 gem 'shopify_app', '~> 21.8'
 gem 'sinatra'
 gem 'sinatra-contrib'
 gem 'sinatra-cors'
-
-gem 'rubocop', '~> 1.59'
